dependencies:
${MIRROR_WGET}/download_package pir.georgetown.edu.proisoform 
${MIRROR_WGET}/download_package build.berkeleybop.org.goload 
${MIRROR_WGET}/download_package build.berkeleybop.org.gpad.goload 
${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
${MIRROR_WGET}/download_package ftp.geneontology.org.goload 

TAG: goload-6-0-12-10
DATE: 08/07/2018
STAFF: lec
CHANGES TR12910/goamouse/ change order of qualfier (col 3)

TAG: goload-6-0-12-9
TAG: goload-6-0-12-8
TAG: goload-6-0-12-7
TAG: goload-6-0-12-6
TAG: goload-6-0-12-5
TAG: goload-6-0-12-4
DATE: 05/17/2018
STAFF: lec
CHANGES TR11975/add new GOA_, NOCTUA_ MGI_User, if needed

TAG: goload-6-0-12-3
TAG: goload-6-0-12-2
TAG: goload-6-0-12-1
DATE: 04/06/2018, 04/26/2018
STAFF: lec
CHANGES: 
TR12834/new GO qualifiers & pr.gpad file
includes changes to:
mirror_wget/build.berkeleybop.org.gpad.goload
reports_db/daily/GO_gene_association.py
lib_py_report/go_annot_extensions.py/add 'model-state' to excluded set

TAG: goload-6-0-11-4
DATE: 03/20/2018
STAFF: lec
CHANGES: 
TR12602/UniProtDB/column 17 translated to PR via mgi.gpi file

TAG: goload-6-0-11-3
DATE: 10/31/2017
STAFF: lec
CHANGES: 
TR12664/goamousenoctua/noctua-model-id

TAG: goload-6-0-11-2
DATE: 10/11/2017
STAFF: sc
CHANGES: 
1. goamouse/goamouse.config.default remove ANNOTPOSTFILE
2. goamouse/goamouse.sh - remove call to goamousepost.py
3. goamouse/goamousepost.py - removed this script

TAG: goload-6-0-11-1
DATE: 10/11/2017
STAFF: sc
CHANGES: merge tr12624 to master
1) go.sh - add call to  BIB_updateWFStatusGO
2) don't create annotations when uniprot ID associated with multi markers

TAG: goload-tr12624-BP
DATE: 09/29/2017
STAFF: sc
CHANGES: Branch point tag for tr12646 Tweak to GOA mouse load related to TR12624

TAG: goload-6-0-7-3
DATE: 01/23/2017
STAFF: lec 
CHANGES:
1) TR11938/goamouse/goamousepost.py/autoindex marker/autoselect reference

TAG: goload-6-0-7-1
TAG: goload-6-0-7-2
DATE: 01/05/2017, 01/09/2017
STAFF: lec 
CHANGES: