@@ -42,8 +42,8 @@ LOGDIR=${FILEDIR}/logs
 RPTDIR=${FILEDIR}/reports
 OUTPUTDIR=${FILEDIR}/output
 INPUTDIR=${FILEDIR}/input
-INFILE_NAME_GZ=${DATADOWNLOADS}/go_gene_assoc/submission/paint/pre-submission/gene_association.paint_mgi.gz
-INFILE_NAME_GAF=${INPUTDIR}/gene_association.paint_mgi
+INFILE_NAME_GZ=${DATADOWNLOADS}/snapshot.geneontology.org/annotations/mgi.gaf.gz
+INFILE_NAME_GAF=${INPUTDIR}/mgi.gaf
 INFILE_NAME=${INPUTDIR}/gorefgen.annot
 INFILE_NAME_ERROR=${INPUTDIR}/gorefgen.annot.error
 export FILEDIR ARCHIVEDIR LOGDIR RPTDIR OUTPUTDIR INPUTDIR 
