@@ -4,7 +4,7 @@
 
 <H3>Inputs</H3>
 <UL>
-<LI><A HREF="/data/loads/go/gorefgen/input/gene_association.paint_mgi">GAF file</A></LI>
+<LI><A HREF="/data/loads/go/gorefgen/input/mgi.gaf">GAF file</A></LI>
 <LI><A HREF="/data/loads/go/gorefgen/input/gorefgen.annot">Annotation input file</A></LI>
 </UL>
 
