@@ -4,6 +4,12 @@ ${MIRROR_WGET}/download_package build.berkeleybop.org.goload
 ${MIRROR_WGET}/download_package build.berkeleybop.org.gpad.goload 
 ${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
 ${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
+${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
+
+TAG: goload-6-0-12-11
+DATE: 08/15/2018
+STAFF: lec
+CHANGES TR12918/PAINT/gorefgen
 
 TAG: goload-6-0-12-10
 DATE: 08/07/2018
